--- a/SorterTesting/SorterTesting.csproj
+++ b/SorterTesting/SorterTesting.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.13.9" />
+    <PackageReference Include="icecream" Version="3.2.0" />
   </ItemGroup>
 
 </Project>
