--- a/src/PixelSorting/UnitTests/UnitTests.csproj
+++ b/src/PixelSorting/UnitTests/UnitTests.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TestDataGenerator\TestDataGenerator.csproj" />
+  </ItemGroup>
+
 </Project>
