--- a/src/PixelSorting/Main/Main.csproj
+++ b/src/PixelSorting/Main/Main.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Sorting\Sorting.csproj" />
     <ProjectReference Include="..\TestDataGenerator\TestDataGenerator.csproj" />
+    <ProjectReference Include="..\Utils\Utils.csproj" />
   </ItemGroup>
 
 </Project>
