--- a/src/PixelSorting/Imaging/Imaging.csproj
+++ b/src/PixelSorting/Imaging/Imaging.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Sorting\Sorting.csproj" />
+    <ProjectReference Include="..\TestDataGenerator\TestDataGenerator.csproj" />
   </ItemGroup>
 
 </Project>
