Refactoring, improvements, unit tests

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Testing Data
 *_Sorted.txt
 *_Unsorted.txt
+/src/SampleImages/img_0
 
 
 ## Ignore Visual Studio temporary files, build results, and
