--- a/src/PixelSorting/Main/Main.csproj
+++ b/src/PixelSorting/Main/Main.csproj
@@ -6,11 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>preview</LangVersion>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" Version="0.13.11" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Imaging\Imaging.csproj" />
