--- a/src/PixelSorting/Sorting/Sorting.csproj
+++ b/src/PixelSorting/Sorting/Sorting.csproj
@@ -1,15 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-	<NoWarn>CS8500</NoWarn>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		<NoWarn>CS8500</NoWarn>
+		<PackageId>0qln.PixelSorting</PackageId>
+		<Version>1.1.0-alpha</Version>
+		<Author>0qln</Author>
+		<Product>PixelSorting</Product>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<RepositoryUrl>https://github.com/0qln/PixelSorting</RepositoryUrl>
+		<PackageProjectUrl>https://github.com/0qln/PixelSorting</PackageProjectUrl>
+		<Description>A library for high performance and quality pixel sorting on the CPU.</Description>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Utils\Utils.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Utils\Utils.csproj" />
+	</ItemGroup>
 
 </Project>
